--- a/styles/app.scss
+++ b/styles/app.scss
@@ -6,7 +6,7 @@
 @import './components/components';
 
 body {
-    background-color: var(--generic-bg);
+    background-color: #000000bd;
 }
 
 h1,h2,h3,h4,h5,h6,button, a, span {
