--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -1,1 +1,10 @@
-.btn {}
+.btn {
+    min-width: fit-content;
+    height: max-content;
+    background-color: #7f5222;
+    border-radius: 50px;
+    padding: .25rem 1rem;
+    color: white;
+    font-size: 1rem;
+    line-height: 24px;
+}
