Feature: News changes

--- a/styles/app.css
+++ b/styles/app.css
@@ -1263,19 +1263,12 @@ section:not(.footer__wrapper):not(.header__wrapper):last-child {
   max-width: 1200px;
   min-height: 64px;
   margin: 0 auto;
-  position: sticky;
+  position: fixed;
   top: 20px;
+  left: 0;
+  right: 0;
+  z-index: 99;
   padding: 1.5rem;
-}
-.header__capa {
-  width: calc(100% + 7px);
-  height: calc(100% + 8px);
-  background-color: rgb(127, 82, 34);
-  border-radius: 50px;
-  position: absolute;
-  left: -2px;
-  top: -1px;
-  z-index: -1;
 }
 .header__wrapper {
   width: 100%;
@@ -1291,6 +1284,7 @@ section:not(.footer__wrapper):not(.header__wrapper):last-child {
   top: 0;
   left: 0;
   z-index: 2;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1215686275);
 }
 .header-title {
   display: flex;
@@ -1303,8 +1297,8 @@ section:not(.footer__wrapper):not(.header__wrapper):last-child {
   color: #313131;
 }
 .header__icon {
-  width: 60px;
-  height: 60px;
+  width: 40px;
+  height: 40px;
   border-radius: 50px;
 }
 .header__content {
@@ -1318,9 +1312,441 @@ section:not(.footer__wrapper):not(.header__wrapper):last-child {
   gap: 1rem;
 }
 .header__rrss em {
-  font-size: 1.5rem;
+  font-size: 1rem;
 }
 
+.hero {
+  width: 100%;
+  height: 100dvh;
+  background-image: url(../../assets/hero_bg.jpg);
+  background-position: bottom center;
+  background-size: cover;
+  padding: 100px 0 50px 0;
+  position: relative;
+}
+.hero__wrapper {
+  max-width: 1200px;
+  height: 100%;
+  margin: 0 auto;
+  display: flex;
+  gap: 1rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.hero__layout-img-one {
+  display: none;
+}
+@media (min-width: 1023px) {
+  .hero__layout-img-one {
+    display: block;
+    position: absolute;
+    top: 100px;
+    left: 0;
+    width: 300px;
+    aspect-ratio: 1/1;
+    -o-object-fit: cover;
+       object-fit: cover;
+    border-radius: 10px;
+    border: 5px solid #000;
+  }
+}
+.hero__layout-img-two {
+  display: none;
+}
+@media (min-width: 1023px) {
+  .hero__layout-img-two {
+    display: block;
+    position: absolute;
+    bottom: 100px;
+    right: 0px;
+    width: 300px;
+    aspect-ratio: 1/1;
+    -o-object-fit: cover;
+       object-fit: cover;
+    border-radius: 10px;
+    border: 5px solid #000;
+  }
+}
+.hero__layout-img-three {
+  display: none;
+}
+@media (min-width: 1023px) {
+  .hero__layout-img-three {
+    display: block;
+    position: absolute;
+    bottom: 70px;
+    left: 100px;
+    width: 300px;
+    aspect-ratio: 1/1;
+    -o-object-fit: cover;
+       object-fit: cover;
+    border-radius: 10px;
+    border: 5px solid #000;
+  }
+}
+.hero__img {
+  height: 500px;
+  -o-object-fit: contain;
+     object-fit: contain;
+  aspect-ratio: 16/9;
+  opacity: 0;
+  transform: scale(0);
+  animation: fadeIn ease-in-out 1s forwards 0.25s;
+}
+.hero-title {
+  font-weight: bold;
+  font-size: 1rem;
+  line-height: 1em;
+  color: #fff;
+}
+
+.banner-information {
+  width: 100%;
+  display: grid;
+  place-content: center;
+  align-items: center;
+  gap: 1rem;
+  background-color: rgb(28, 41, 54);
+  padding: 2rem 1rem;
+}
+.banner-information__rrss {
+  margin: auto;
+  font-size: 4em;
+  color: #fff;
+}
+.banner-information__contract {
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+.banner-information__contract-address {
+  max-width: 24ch;
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.25em;
+  color: white;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  word-wrap: break-word;
+  -webkit-box-orient: vertical;
+}
+@media (min-width: 600px) {
+  .banner-information__contract-address {
+    max-width: 100%;
+  }
+}
+.banner-information__contract-copy {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0.75rem;
+  background-color: rgba(0, 127, 255, 0.1);
+  padding: 1rem;
+  border-radius: 50px;
+  font-weight: bold;
+  font-size: 1em;
+  color: white;
+}
+
+.about {
+  max-width: 1200px;
+  min-height: 100dvh;
+  margin: auto !important;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+  gap: 5rem;
+  padding: 4rem 1rem;
+}
+@media (min-width: 1024px) {
+  .about {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(auto, 1fr));
+    gap: 5rem;
+  }
+}
+.about__img {
+  width: 90%;
+  aspect-ratio: 5/4;
+  border-radius: 20px;
+  opacity: 0;
+  transform: scale(0);
+  transform: rotate(-3deg);
+  animation: fadeInRotate ease-in-out 1s forwards 0.25s;
+}
+.about__content-title {
+  font-weight: bold;
+  font-size: 5em;
+  color: rgb(28, 41, 54);
+}
+@media (min-width: 600px) {
+  .about__content-title {
+    font-size: 7em;
+  }
+}
+.about__content-text {
+  font-size: 1.25em;
+  line-height: normal;
+}
+
+.how-to-buy {
+  width: 100%;
+  min-height: 100dvh;
+  display: flex;
+  align-items: center;
+  position: relative;
+  background-image: url(../../assets/bg-hero.jpg);
+  background-position: bottom center;
+  background-size: cover;
+}
+.how-to-buy-title {
+  font-weight: bold;
+  font-size: 3em;
+  line-height: 1em;
+  color: #1e475c;
+}
+.how-to-buy__wrapper {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: grid;
+  align-items: center;
+  gap: 1rem;
+  padding: 1rem;
+  z-index: 3;
+}
+@media (min-width: 768px) {
+  .how-to-buy__wrapper {
+    grid-template-columns: auto 300px;
+  }
+}
+@media (min-width: 900px) {
+  .how-to-buy__wrapper {
+    grid-template-columns: auto 400px;
+  }
+}
+
+#integrated-terminal {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  background-color: rgba(255, 255, 255, 0.7176470588);
+  border-radius: 8px;
+  padding: 1rem;
+}
+
+.steps {
+  width: 100%;
+  min-height: 450px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  overflow: hidden;
+  border-radius: 8px;
+  padding: 3rem 1rem;
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  background-color: rgba(255, 255, 255, 0.6352941176);
+}
+.steps__wrapper {
+  display: flex;
+  gap: 4rem;
+  align-items: center;
+  justify-content: space-between;
+  transition: ease-in-out 0.25s;
+}
+.steps-item {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+}
+.steps-item-subtitle {
+  font-weight: bold;
+  font-size: 1.75em;
+  line-height: 1.75em;
+  color: rgb(39, 123, 162);
+}
+.steps-item-title {
+  font-weight: bold;
+  font-size: 3em;
+  line-height: 1em;
+  color: rgb(39, 123, 162);
+}
+.steps-item-text {
+  color: rgb(39, 123, 162);
+  font-size: 1.1em;
+  line-height: 1.25em;
+}
+.steps__controls {
+  width: 50%;
+  display: grid;
+  grid-template-columns: repeat(4, minmax(auto, 1fr));
+  gap: 1rem;
+  margin: 1rem 0;
+}
+.steps__controls-item {
+  border-radius: 1rem;
+  background-color: #fff;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1215686275);
+  padding: 0.75rem 1rem;
+  transition: all ease-in-out 0.25s;
+}
+.steps__controls-item:not(.steps__controls-item.active):hover {
+  cursor: pointer;
+  background-color: #fff;
+  transform: scale(1.1) rotate(5deg);
+}
+.steps__controls-item.active {
+  background-color: #1e475c;
+}
+
+.tokenomics {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 5rem 0;
+}
+.tokenomics-title {
+  font-weight: bold;
+  font-size: 4rem;
+  text-align: center;
+}
+.tokenomics__columns {
+  width: 100%;
+  display: grid;
+  align-items: center;
+  place-content: center;
+  gap: 1rem;
+}
+@media (min-width: 600px) {
+  .tokenomics__columns {
+    grid-template-columns: repeat(2, minmax(auto, 1fr));
+  }
+}
+.tokenomics__columns-column {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+}
+.tokenomics__columns-column-img {
+  width: 30%;
+  aspect-ratio: 1/1;
+}
+.tokenomics__columns-column-title {
+  font-weight: bold;
+  font-size: 3rem;
+  line-height: normal;
+}
+.tokenomics__columns-column-subtitle {
+  font-size: 1.5rem;
+  line-height: normal;
+}
+
+.scroller {
+  max-width: 100%;
+  padding: 1rem;
+  background-color: rgb(28, 41, 54);
+}
+
+.scroller__inner {
+  padding-block: 1rem;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 5em;
+}
+.scroller__inner h1 {
+  font-weight: bold;
+  font-size: 3em;
+  color: #fff;
+}
+
+.scroller[data-animated=true] {
+  overflow: hidden;
+}
+
+.scroller[data-animated=true] .scroller__inner {
+  width: -moz-max-content;
+  width: max-content;
+  flex-wrap: nowrap;
+  animation: scroll var(--_animation-duration, 40s) var(--_animation-direction, forwards) linear infinite;
+}
+
+.scroller[data-direction=right] {
+  --_animation-direction: reverse;
+}
+
+.scroller[data-direction=left] {
+  --_animation-direction: forwards;
+}
+
+.scroller[data-speed=fast] {
+  --_animation-duration: 20s;
+}
+
+.scroller[data-speed=slow] {
+  --_animation-duration: 60s;
+}
+
+.gallery {
+  max-width: 1200px;
+  margin: 5rem auto;
+  -moz-columns: 3;
+       columns: 3;
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
+}
+.gallery-item {
+  display: block;
+  margin-bottom: 1rem;
+  position: relative;
+}
+
+@keyframes scroll {
+  to {
+    transform: translate(calc(-50% - 0.5rem));
+  }
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: scale(0);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+@keyframes fadeInRotate {
+  from {
+    opacity: 0;
+    transform: scale(0);
+    transform: rotate(0deg);
+  }
+  to {
+    opacity: 1;
+    transform: scale(0);
+    transform: rotate(-3deg);
+  }
+}
 .btn {
   min-width: -moz-fit-content;
   min-width: fit-content;
@@ -1335,7 +1761,7 @@ section:not(.footer__wrapper):not(.header__wrapper):last-child {
 }
 
 body {
-  background-color: rgba(0, 0, 0, 0.7411764706);
+  background-color: #fff;
 }
 
 h1, h2, h3, h4, h5, h6, button, a, span {
