--- a/styles/layouts/_header.scss
+++ b/styles/layouts/_header.scss
@@ -7,20 +7,12 @@
   max-width: 1200px;
   min-height: calc(56px + 8px);
   margin: 0 auto;
-  position: sticky;
+  position: fixed;
   top: 20px;
+  left: 0;
+  right: 0;
+  z-index: 99;
   padding: 1.5rem;
-
-  &__capa {
-    width: calc(100% + 7px);
-    height: calc(100% + 8px);
-    background-color: rgb(127, 82, 34);
-    border-radius: 50px;
-    position: absolute;
-    left: -2px;
-    top: -1px;
-    z-index: -1;
-  }
 
   &__wrapper {
     width: 100%;
@@ -36,6 +28,7 @@
     top: 0;
     left: 0;
     z-index: 2;
+    box-shadow: 0px 0px 5px #0000001f;
   }
 
   &-title {
@@ -50,8 +43,8 @@
   }
 
   &__icon {
-    width: 60px;
-    height: 60px;
+    width: 40px;
+    height: 40px;
     border-radius: 50px;
   }
 
@@ -67,7 +60,7 @@
     gap: 1rem;
 
     & em {
-      font-size: 1.5rem;
+      font-size: 1rem;
     }
   }
 }
