--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -1,2 +1,461 @@
 @use "../settings/breakpoints" as breakpoints;
 @use "../utils/mixins" as mixins;
+
+.hero {
+  width: 100%;
+  height: 100dvh;
+  background-image: url(../../assets/hero_bg.jpg);
+  background-position: bottom center;
+  background-size: cover;
+  padding: 100px 0 50px 0;
+  position: relative;
+
+  &__wrapper {
+    max-width: 1200px;
+    height: 100%;
+    margin: 0 auto;
+    display: flex;
+    gap: 1rem;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+  }
+
+  &__layout-img {
+    &-one {
+      display: none;
+      @media (min-width: 1023px) {
+        display: block;
+        position: absolute;
+        top: 100px;
+        left: 0;
+        width: 300px;
+        aspect-ratio: 1/1;
+        object-fit: cover;
+        border-radius: 10px;
+        border: 5px solid #000;
+      }
+    }
+    &-two {
+      display: none;
+      @media (min-width: 1023px) {
+        display: block;
+        position: absolute;
+        bottom: 100px;
+        right: 0px;
+        width: 300px;
+        aspect-ratio: 1/1;
+        object-fit: cover;
+        border-radius: 10px;
+        border: 5px solid #000;
+      }
+    }
+
+    &-three {
+      display: none;
+      @media (min-width: 1023px) {
+        display: block;
+        position: absolute;
+        bottom: 70px;
+        left: 100px;
+        width: 300px;
+        aspect-ratio: 1/1;
+        object-fit: cover;
+        border-radius: 10px;
+        border: 5px solid #000;
+      }
+    }
+  }
+
+  &__img {
+    height: 500px;
+    object-fit: contain;
+    aspect-ratio: 16/9;
+    opacity: 0;
+    transform: scale(0);
+    animation: fadeIn ease-in-out 1s forwards 0.25s;
+  }
+
+  &-title {
+    font-weight: bold;
+    font-size: 1rem;
+    line-height: 1em;
+    color: #fff;
+  }
+}
+
+.banner-information {
+  width: 100%;
+  display: grid;
+  place-content: center;
+  align-items: center;
+  gap: 1rem;
+  background-color: rgb(28, 41, 54);
+  padding: 2rem 1rem;
+
+  &__rrss {
+    margin: auto;
+    font-size: 4em;
+    color: #fff;
+  }
+
+  &__contract {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+
+    &-address {
+      max-width: 24ch;
+      text-align: center;
+      font-weight: bold;
+      font-size: 1.25em;
+      color: white;
+      display: -webkit-box;
+      -webkit-line-clamp: 3;
+      word-wrap: break-word;
+      -webkit-box-orient: vertical;
+
+      @media (min-width: 600px) {
+        max-width: 100%;
+      }
+    }
+
+    &-copy {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 0.75rem;
+      background-color: rgb(0 127 255 / 10%);
+      padding: 1rem;
+      border-radius: 50px;
+      font-weight: bold;
+      font-size: 1em;
+      color: white;
+    }
+  }
+}
+
+.about {
+  max-width: 1200px;
+  min-height: 100dvh;
+  margin: auto !important;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+  gap: 5rem;
+  padding: 4rem 1rem;
+
+  @media (min-width: 1024px) {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(auto, 1fr));
+    gap: 5rem;
+  }
+
+  &__img {
+    width: 90%;
+    aspect-ratio: 5/4;
+    border-radius: 20px;
+    opacity: 0;
+    transform: scale(0);
+    transform: rotate(-3deg);
+    animation: fadeInRotate ease-in-out 1s forwards 0.25s;
+    // @media (min-width: 1024px) {
+    //     position: sticky;
+    //     top: 100px;
+    //     align-self: flex-start;
+    // }
+  }
+
+  &__content {
+    &-title {
+      font-weight: bold;
+      font-size: 5em;
+      color: rgb(28, 41, 54);
+
+      @media (min-width: 600px) {
+        font-size: 7em;
+      }
+    }
+
+    &-text {
+      font-size: 1.25em;
+      line-height: normal;
+    }
+  }
+}
+
+.how-to-buy {
+  width: 100%;
+  min-height: 100dvh;
+  display: flex;
+  align-items: center;
+  position: relative;
+
+  background-image: url(../../assets/bg-hero.jpg);
+  background-position: bottom center;
+  background-size: cover;
+
+  &-title {
+    font-weight: bold;
+    font-size: 3em;
+    line-height: 1em;
+    color: #1e475c;
+  }
+
+  &__wrapper {
+    max-width: 1200px;
+    margin: 0 auto;
+    display: grid;
+    align-items: center;
+    gap: 1rem;
+    padding: 1rem;
+    z-index: 3;
+
+    @media (min-width: 768px) {
+      grid-template-columns: auto 300px;
+    }
+
+    @media (min-width: 900px) {
+      grid-template-columns: auto 400px;
+    }
+  }
+}
+
+#integrated-terminal {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  backdrop-filter: blur(5px);
+  background-color: #ffffffb7;
+  border-radius: 8px;
+  padding: 1rem;
+}
+
+// Steps
+.steps {
+  width: 100%;
+  min-height: 450px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  overflow: hidden;
+  border-radius: 8px;
+  padding: 3rem 1rem;
+  backdrop-filter: blur(5px);
+  background-color: #ffffffa2;
+
+  &__wrapper {
+    display: flex;
+    gap: 4rem;
+    align-items: center;
+    justify-content: space-between;
+    transition: ease-in-out 0.25s;
+  }
+
+  &-item {
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
+
+    &-subtitle {
+      font-weight: bold;
+      font-size: 1.75em;
+      line-height: 1.75em;
+      color: rgb(39, 123, 162);
+    }
+    &-title {
+      font-weight: bold;
+      font-size: 3em;
+      line-height: 1em;
+      color: rgb(39, 123, 162);
+    }
+
+    &-text {
+      color: rgb(39, 123, 162);
+      font-size: 1.1em;
+      line-height: 1.25em;
+    }
+  }
+
+  &__controls {
+    width: 50%;
+    display: grid;
+    grid-template-columns: repeat(4, minmax(auto, 1fr));
+    gap: 1rem;
+    margin: 1rem 0;
+
+    &-item {
+      border-radius: 1rem;
+      background-color: #fff;
+      box-shadow: 0px 0px 5px #0000001f;
+      padding: 0.75rem 1rem;
+      transition: all ease-in-out 0.25s;
+      &:not(&.active):hover {
+        cursor: pointer;
+        background-color: #fff;
+        transform: scale(1.1) rotate(5deg);
+      }
+      &.active {
+        background-color: #1e475c;
+      }
+    }
+  }
+}
+
+// Tokenomics
+
+.tokenomics {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 5rem 0;
+
+  &-title {
+    font-weight: bold;
+    font-size: 4rem;
+    text-align: center;
+  }
+
+  &__columns {
+    width: 100%;
+    display: grid;
+    align-items: center;
+    place-content: center;
+    gap: 1rem;
+
+    @media (min-width: 600px) {
+      grid-template-columns: repeat(2, minmax(auto, 1fr));
+    }
+
+    &-column {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 0.5rem;
+
+      &-img {
+        width: 30%;
+        aspect-ratio: 1/1;
+      }
+
+      &-title {
+        font-weight: bold;
+        font-size: 3rem;
+        line-height: normal;
+      }
+
+      &-subtitle {
+        font-size: 1.5rem;
+        line-height: normal;
+      }
+    }
+  }
+}
+
+.scroller {
+  max-width: 100%;
+  padding: 1rem;
+  background-color: rgb(28, 41, 54);
+}
+
+.scroller__inner {
+  padding-block: 1rem;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 5em;
+
+  & h1 {
+    font-weight: bold;
+    font-size: 3em;
+    color: #fff;
+  }
+}
+
+.scroller[data-animated="true"] {
+  overflow: hidden;
+}
+
+.scroller[data-animated="true"] .scroller__inner {
+  width: max-content;
+  flex-wrap: nowrap;
+  animation: scroll var(--_animation-duration, 40s)
+    var(--_animation-direction, forwards) linear infinite;
+}
+
+.scroller[data-direction="right"] {
+  --_animation-direction: reverse;
+}
+
+.scroller[data-direction="left"] {
+  --_animation-direction: forwards;
+}
+
+.scroller[data-speed="fast"] {
+  --_animation-duration: 20s;
+}
+
+.scroller[data-speed="slow"] {
+  --_animation-duration: 60s;
+}
+
+
+// Gallery
+
+.gallery {
+    max-width: 1200px;
+    margin: 5rem auto;
+    columns: 3;
+    column-gap: 1rem;
+
+    &-item {
+        display: block;
+        margin-bottom: 1rem;
+        position: relative;
+    }
+}
+
+@keyframes scroll {
+  to {
+    transform: translate(calc(-50% - 0.5rem));
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: scale(0);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+@keyframes fadeInRotate {
+  from {
+    opacity: 0;
+    transform: scale(0);
+    transform: rotate(0deg);
+  }
+  to {
+    opacity: 1;
+    transform: scale(0);
+    transform: rotate(-3deg);
+  }
+}
